# template-python-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TEMPLATE.md  llms.txt  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
scripts/: README.md  init.sh
src/template_python_cli/: cli.py  config.py  defaults.toml  utils.py
tests/: fixtures.py  test_cli.py  test_config.py  test_utils.py
