[project]
name = "template-python-cli"
version = "0.0.0"
description = "{{TOOL_DESCRIPTION}}"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"
authors = [{name = "{{AUTHOR}}"}]
keywords = ["cli", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["typer>=0.12"]

[project.urls]
Homepage = "https://github.com/calvindotsg/template-python-cli"
Repository = "https://github.com/calvindotsg/template-python-cli"
Issues = "https://github.com/calvindotsg/template-python-cli/issues"
Changelog = "https://github.com/calvindotsg/template-python-cli/blob/main/CHANGELOG.md"

[project.scripts]
template-python-cli = "template_python_cli.cli:app"

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8", "pytest-cov>=5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template_python_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/template_python_cli --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
omit = ["src/template_python_cli/cli.py"]
